8061616: HotspotDiagnosticMXBean.getVMOption() throws IllegalArgumentException for flags of type double

Reviewed-by: mchung, sla